# avala-sdk-python

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml
avala/: __init__.py  _async_client.py  _async_http.py  _client.py  _config.py  _http.py  _pagination.py  _redaction.py  errors.py  signup.py
avala/cli/: __init__.py  _output.py  agents.py  annotations.py  auto_label.py  configure.py  consensus.py  datasets.py  exports.py  fleet.py  import_.py  inference_providers.py  lerobot.py  projects.py  quality_targets.py  shell_completion.py  status.py  storage_configs.py  tasks.py  view.py  webhooks.py
avala/importers/: __init__.py  cloud.py  lerobot.py  rosbag.py
avala/lerobot/: __init__.py
avala/resources/: __init__.py  _base.py  agents.py  annotation_issues.py  annotations.py  auto_label_jobs.py  consensus.py  datasets.py  exports.py  inference_providers.py  organizations.py  projects.py  quality_targets.py  slices.py  storage_configs.py  tasks.py  webhooks.py
avala/resources/fleet/: __init__.py  alerts.py  devices.py  events.py  recordings.py  rules.py  uploads.py
avala/torch/: __init__.py
avala/types/: __init__.py  account.py  agent.py  annotation_issue.py  auto_label_job.py  consensus.py  dataset.py  export.py  fleet.py  fleet_upload.py  inference_provider.py  organization.py  project.py  quality_target.py  slice.py  storage_config.py  task.py  webhook.py
tests/: conftest.py  integration_test.py  test_agents.py  test_annotation_issues.py  test_annotations.py  test_api_contracts.py  test_async_client.py  test_async_http.py  test_auto_label_jobs.py  test_cli.py  test_cli_annotations.py  test_cli_view.py  test_client.py  test_cloud_import.py  test_config.py  test_consensus.py  test_datasets.py  test_datasets_validation.py  test_datasets_wait.py  test_error_redaction.py  test_errors.py  test_exports.py  test_fleet.py  test_http.py  test_importers.py  test_inference_providers.py  test_lerobot.py  test_lerobot_import.py  test_organizations.py  test_pagination.py  test_projects.py  test_quality_targets.py  test_rosbag_import.py  test_signup.py  test_slices.py  test_storage_configs.py  test_storage_configs_get.py  test_tasks.py  test_torch_dataloader.py  test_types.py  (+1 more)
tests/e2e/: README.md  test_importers_e2e.py  test_resources_e2e.py
