[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "avala"
version = "0.7.0"
description = "Official Python SDK for the Avala API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["httpx>=0.24,<1", "pydantic>=2.0,<3"]

[project.optional-dependencies]
dev = ["pytest>=7", "respx>=0.20", "mypy>=1", "ruff>=0.1", "pytest-asyncio>=0.21"]
cli = ["click>=8.0", "rich>=13.0", "tqdm>=4.60"]
# PyTorch data loading (avala.torch) — stream annotated frames into training, no export step.
torch = ["torch>=2.0", "pillow>=9.0"]

[project.scripts]
avala = "avala.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120

[tool.mypy]
strict = true
# avala/torch subclasses untyped third-party torch base classes; strict typing there
# isn't productive and torch isn't a base/CI dependency. (cli/ excluded for similar reasons.)
exclude = ["avala/cli/", "avala/torch/"]
